--- a/1.6.1/Dockerfile
+++ b/1.6.1/Dockerfile
@@ -26,21 +26,16 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     libmozjs185-1.0 \
     libnspr4 \
     libnspr4-0d \
+    wget \
   && rm -rf /var/lib/apt/lists/*
 
-# grab gosu for easy step-down from root and tini for signal handling
+# grab gosu for easy step-down from root
 RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
   && curl -o /usr/local/bin/gosu -fSL "https://github.com/tianon/gosu/releases/download/1.7/gosu-$(dpkg --print-architecture)" \
   && curl -o /usr/local/bin/gosu.asc -fSL "https://github.com/tianon/gosu/releases/download/1.7/gosu-$(dpkg --print-architecture).asc" \
   && gpg --verify /usr/local/bin/gosu.asc \
   && rm /usr/local/bin/gosu.asc \
-  && chmod +x /usr/local/bin/gosu \
-  && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 6380DC428747F6C393FEACA59A84159D7001A4E5 \
-  && curl -o /usr/local/bin/tini -fSL "https://github.com/krallin/tini/releases/download/v0.14.0/tini" \
-  && curl -o /usr/local/bin/tini.asc -fSL "https://github.com/krallin/tini/releases/download/v0.14.0/tini.asc" \
-  && gpg --verify /usr/local/bin/tini.asc \
-  && rm /usr/local/bin/tini.asc \
-  && chmod +x /usr/local/bin/tini
+  && chmod +x /usr/local/bin/gosu
 
 # https://www.apache.org/dist/couchdb/KEYS
 ENV GPG_KEYS \
@@ -60,10 +55,11 @@ RUN set -xe \
 
 ENV COUCHDB_VERSION 1.6.1
 
-# download dependencies, compile and install couchdb,
+# download dependencies, compile and install couchdb, and tini for signal handling
 # set correct permissions, expose couchdb to the outside and disable logging to disk
 RUN buildDeps=' \
     automake \
+    cmake \
     gcc \
     g++ \
     erlang-dev \
@@ -74,6 +70,15 @@ RUN buildDeps=' \
     make \
   ' \
   && apt-get update && apt-get install -y --no-install-recommends $buildDeps \
+  && wget https://github.com/krallin/tini/archive/v0.14.0.tar.gz \
+  && tar zxvf v0.14.0.tar.gz \
+  && rm -rf v0.14.0.tar.gz \
+  && cd tini-0.14.0/ \
+  && cmake . && make install \
+  && mv ./tini /usr/local/bin/tini \
+  && chmod +x /usr/local/bin/tini \
+  && cd .. \
+  && rm -r tini-0.14.0/ \
   && curl -fSL http://apache.osuosl.org/couchdb/source/$COUCHDB_VERSION/apache-couchdb-$COUCHDB_VERSION.tar.gz -o couchdb.tar.gz \
   && curl -fSL https://www.apache.org/dist/couchdb/source/$COUCHDB_VERSION/apache-couchdb-$COUCHDB_VERSION.tar.gz.asc -o couchdb.tar.gz.asc \
   && gpg --verify couchdb.tar.gz.asc \
